syntax = "proto3";

package decent.user;

option go_package = "Decent/x/user/types";

// Msg defines the Msg service.
service Msg {
  rpc DepositToken  (MsgDepositToken ) returns (MsgDepositTokenResponse );
  rpc WithdrawToken (MsgWithdrawToken) returns (MsgWithdrawTokenResponse);
}
message MsgDepositToken {
  string creator = 1;
  string deposit = 2;
}

message MsgDepositTokenResponse {}

message MsgWithdrawToken {
  string creator  = 1;
  string withdraw = 2;
}

message MsgWithdrawTokenResponse {}

